# flight-prices

./: price_history.csv  pyproject.toml
.github/workflows/: check-prices.yml  keepalive.yml
src/: config.py  main.py  notifier.py  scraper.py
